# stock-mercado-fator-quaest

./: .gitignore  COMECE_AQUI.txt  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: dados_di.csv
docs/: CASOS_DE_USO.md  ESTRUTURA_PROJETO.md  INDEX.md  QUICKSTART.md  RESUMO_EXECUTIVO.md  TUTORIAL_STREAMLIT_CLOUD.md
src/: dados_di.py
