[project]
name = "stock-mercado-fator-quaest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.0.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "selenium>=4.38.0",
    "streamlit>=1.51.0",
    "webdriver-manager>=4.0.2",
]
